--- a/MarkdownDeep/MarkdownDeep.nuspec
+++ b/MarkdownDeep/MarkdownDeep.nuspec
@@ -19,7 +19,6 @@
 		<tags>Markdown MarkdownExtra MarkdownDeep</tags>
 	</metadata>
 	<files>
-		<file src="bin\Release\MarkdownDeep.dll" target="lib\.NetFramework 3.5" />
-		<file src="bin\Release\MarkdownDeep.pdb" target="lib\.NetFramework 3.5" />
+		<file src="bin/Release/MarkdownDeep.dll" target="lib/net451" />
 	</files>
 </package>
