--- a/MarkdownDeep/MarkdownDeep.csproj
+++ b/MarkdownDeep/MarkdownDeep.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MarkdownDeep</RootNamespace>
     <AssemblyName>MarkdownDeep</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -60,12 +60,12 @@
     <Reference Include="Accessibility" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abbreviation.cs" />
@@ -82,6 +82,7 @@
     <Compile Include="TableSpec.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="IMarkdownRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="MarkdownDeep.nuspec" />
