--- a/MarkdownDeep/MarkdownDeep.nuspec
+++ b/MarkdownDeep/MarkdownDeep.nuspec
@@ -3,7 +3,7 @@
 	<metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 		<id>MarkdownDeep-av.NET</id>
 		<title>MarkdownDeep-av</title>
-		<version>1.5.2</version>
+		<version>1.5.3</version>
 		<authors>Topten Software</authors>
 		<owners>Topten Software</owners>
 		<licenseUrl>http://www.toptensoftware.com/markdowndeep/license</licenseUrl>
@@ -21,5 +21,6 @@
 	<files>
 		<file src="bin/Release/MarkdownDeep.dll" target="lib/net451" />
 		<file src="bin/Release/MarkdownDeep.dll" target="lib/dnxcore50" />
+		<file src="bin/Release/MarkdownDeep.dll" target="lib/MonoAndroid10" />
 	</files>
 </package>
