--- a/MarkdownDevBed/MarkdownDevBed.csproj
+++ b/MarkdownDevBed/MarkdownDevBed.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MarkdownDevBed</RootNamespace>
     <AssemblyName>MarkdownDevBed</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -48,6 +48,20 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rendering\MD\MarkdownRenderer.cs" />
+    <Compile Include="Rendering\MD\MDText.cs" />
+    <Compile Include="Rendering\MD\Interfaces.cs" />
+    <Compile Include="Rendering\MD\MDBlock.cs" />
+    <Compile Include="Rendering\MD\MDCodeBlock.cs" />
+    <Compile Include="Rendering\MD\MDEM.cs" />
+    <Compile Include="Rendering\MD\ListItem.cs" />
+    <Compile Include="Rendering\MD\OrderedList.cs" />
+    <Compile Include="Rendering\MD\UnorderedList.cs" />
+    <Compile Include="Rendering\MD\Quote.cs" />
+    <Compile Include="Rendering\MD\DD.cs" />
+    <Compile Include="Rendering\MD\DT.cs" />
+    <Compile Include="Rendering\MD\Table.cs" />
+    <Compile Include="Rendering\MD\Paragraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownDeep\MarkdownDeep.csproj">
@@ -57,6 +71,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="input.txt" />
+    <Content Include="obj\Release\MarkdownDevBed.exe.mdb" />
+    <Content Include="obj\Release\MarkdownDevBed.csproj.FilesWrittenAbsolute.txt" />
+    <Content Include="obj\Release\.NETFramework,Version=v4.6.1.AssemblyAttribute.cs" />
+    <Content Include="obj\Release\MarkdownDevBed.exe" />
+    <Content Include="Properties\AssemblyInfo.cs" />
+    <Content Include="bin\Release\MarkdownDevBed.exe.mdb" />
+    <Content Include="bin\Release\MarkdownDevBed.exe" />
+    <Content Include="bin\Release\MarkdownDeep.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -66,4 +88,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Folder Include="Rendering\" />
+    <Folder Include="Rendering\MD\" />
+  </ItemGroup>
 </Project>
