--- a/MarkdownDevBed/MarkdownDevBed.csproj
+++ b/MarkdownDevBed/MarkdownDevBed.csproj
@@ -48,20 +48,21 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rendering\MD\MarkdownRenderer.cs" />
-    <Compile Include="Rendering\MD\MDText.cs" />
-    <Compile Include="Rendering\MD\Interfaces.cs" />
-    <Compile Include="Rendering\MD\MDBlock.cs" />
-    <Compile Include="Rendering\MD\MDCodeBlock.cs" />
-    <Compile Include="Rendering\MD\ListItem.cs" />
-    <Compile Include="Rendering\MD\OrderedList.cs" />
-    <Compile Include="Rendering\MD\UnorderedList.cs" />
-    <Compile Include="Rendering\MD\Quote.cs" />
-    <Compile Include="Rendering\MD\DD.cs" />
-    <Compile Include="Rendering\MD\DT.cs" />
-    <Compile Include="Rendering\MD\Table.cs" />
-    <Compile Include="Rendering\MD\Paragraph.cs" />
-    <Compile Include="Rendering\MD\MDEmphasis.cs" />
+    <Compile Include="ToMarkdown\DD.cs" />
+    <Compile Include="ToMarkdown\DT.cs" />
+    <Compile Include="ToMarkdown\IMDBlock.cs" />
+    <Compile Include="ToMarkdown\IMDNode.cs" />
+    <Compile Include="ToMarkdown\ListItem.cs" />
+    <Compile Include="ToMarkdown\MarkdownRenderer.cs" />
+    <Compile Include="ToMarkdown\MDBlock.cs" />
+    <Compile Include="ToMarkdown\MDCodeBlock.cs" />
+    <Compile Include="ToMarkdown\MDEmphasis.cs" />
+    <Compile Include="ToMarkdown\MDText.cs" />
+    <Compile Include="ToMarkdown\OrderedList.cs" />
+    <Compile Include="ToMarkdown\Paragraph.cs" />
+    <Compile Include="ToMarkdown\Quote.cs" />
+    <Compile Include="ToMarkdown\Table.cs" />
+    <Compile Include="ToMarkdown\UnorderedList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownDeep\MarkdownDeep.csproj">
@@ -89,7 +90,6 @@
   </Target>
   -->
   <ItemGroup>
-    <Folder Include="Rendering\" />
-    <Folder Include="Rendering\MD\" />
+    <Folder Include="ToMarkdown\" />
   </ItemGroup>
 </Project>
