Fixes crashes & implements the MD list

--- a/MDGui.Gtk3/MDGui.Gtk3.csproj
+++ b/MDGui.Gtk3/MDGui.Gtk3.csproj
@@ -53,4 +53,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="mdgui.desktop">
+      <DeployService-TargetDirectoryId>Linux.DesktopApplications</DeployService-TargetDirectoryId>
+    </Content>
+  </ItemGroup>
 </Project>
