gives Xaml a chance

--- a/MDGui/MDGui.csproj
+++ b/MDGui/MDGui.csproj
@@ -50,9 +50,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="LogMessagesDialog.xeto">
-      <LogicalName>MDGui.LogMessagesDialog.xeto</LogicalName>
-    </EmbeddedResource>
+    <EmbeddedResource Include="LogMessagesDialog.xeto" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -73,9 +71,9 @@
       <Project>{1569ED47-C7C9-4261-B6F4-7445BD0F2C95}</Project>
       <Name>MarkdownDeep</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Markdown-AV-ToXaml\Markdown-AV-ToXaml.csproj">
+    <ProjectReference Include="..\MarkdownRenderers\MarkdownRenderers.csproj">
       <Project>{B855AE85-C96A-4C28-944F-D1C3F332E0D6}</Project>
-      <Name>Markdown-AV-ToXaml</Name>
+      <Name>MarkdownRenderers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
