--- a/MarkdownRenderers/MarkdownRenderers.csproj
+++ b/MarkdownRenderers/MarkdownRenderers.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{B855AE85-C96A-4C28-944F-D1C3F332E0D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>MarkdownAVToXaml</RootNamespace>
-    <AssemblyName>Markdown-AV-ToXaml</AssemblyName>
+    <AssemblyName>MarkdownRenderers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -34,13 +34,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ToXaml\MDText.cs" />
-    <Compile Include="ToXaml\TextRenderer.cs" />
     <Compile Include="ToXaml\XamlRenderer.cs" />
+    <Compile Include="TextRenderer.cs" />
+    <Compile Include="MDText.cs" />
+    <Compile Include="Model\IMDNode.cs" />
+    <Compile Include="Model\MarkdownRenderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="ToXaml\" />
+    <Folder Include="Model\" />
+    <Folder Include="ToText\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownDeep\MarkdownDeep.csproj">
