the nuspec file from ide

--- a/MDGui.Gtk3/MDGui.Gtk3.csproj
+++ b/MDGui.Gtk3/MDGui.Gtk3.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="MDGui.Gtk3.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
