--- a/MDGui.Gtk3/MDGui.Gtk3.csproj
+++ b/MDGui.Gtk3/MDGui.Gtk3.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="gtk-gui\generated.cs" />
+    <Compile Include="Widget.cs" />
+    <Compile Include="gtk-gui\MDGui.Gtk3.Widget.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
