--- a/MarkdownDeep/MarkdownDeep.nuspec
+++ b/MarkdownDeep/MarkdownDeep.nuspec
@@ -12,6 +12,7 @@
 		<requireLicenseAcceptance>true</requireLicenseAcceptance>
 		<description>
 			MarkdownDeep is a high performance .NET Markdown processor.
+      This build removes the usage of System.Drawing, that breaks portable usage.
 		</description>
 		<summary>
 			This package contains MarkdownDeep.NET only - it does not include the JavaScript client edition
@@ -21,7 +22,6 @@
 	<files>
 		<file src="bin/Release/MarkdownDeep.dll" target="lib/net451" />
 		<file src="bin/Release/MarkdownDeep.dll" target="lib/dnxcore50" />
-		<file src="bin/Release/MarkdownDeep.dll" target="lib/portable-net45+win8+wpa81+wp8
-" />
+		<file src="bin/Release/MarkdownDeep.dll" target="lib/portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10" />
 	</files>
 </package>
