--- a/MDGui/MDGui.csproj
+++ b/MDGui/MDGui.csproj
@@ -44,6 +44,10 @@
     </Compile>
     <Compile Include="LogWindow.cs" />
     <Compile Include="GuiControl.cs" />
+    <Compile Include="SettingsForm.xeto.cs">
+      <DependentUpon>SettingsForm.xeto</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.xeto" />
@@ -52,6 +56,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="LogMessagesDialog.xeto" />
+    <EmbeddedResource Include="SettingsForm.xeto" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
