--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../MarkdownDeepGui/packages.config" />
   <repository path="../MarkdownDeepSample/packages.config" />
+  <repository path="../MarkdownDeepTest/packages.config" />
   <repository path="../MarkdownDeepTests/packages.config" />
+  <repository path="../MDGui.Gtk2/packages.config" />
+  <repository path="../MDGui.Gtk3/packages.config" />
+  <repository path="../MDGui.WinForms/packages.config" />
+  <repository path="../MDGui.Wpf/packages.config" />
+  <repository path="../MDGui/packages.config" />
   <repository path="..\MarkdownDeepSample\packages.config" />
   <repository path="..\MarkdownDeepTests\packages.config" />
 </repositories>
