--- a/MDGui.Gtk3/MDGui.Gtk3.nuspec
+++ b/MDGui.Gtk3/MDGui.Gtk3.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/pazof/markdowndeep</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Parses and renders Markdown to Html and Xaml</description>
-    <releaseNotes>Xaml support yet is minimal, but does the POC</releaseNotes>
+    <releaseNotes>A "file save" menu entry</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Markdown Text GUI Gtk</tags>
   </metadata>
@@ -18,6 +18,5 @@
 		<file src="bin/Release/*.exe" target="tools" />
 		<file src="bin/Release/*.dll" target="tools" />
 	</files>
-
 </package>
 
