--- a/MDGui/MDGui.csproj
+++ b/MDGui/MDGui.csproj
@@ -62,14 +62,14 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
-    <Reference Include="Portable.Xaml">
-      <HintPath>..\..\..\.config\NuGet\packages\Portable.Xaml.0.15.0\lib\portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Portable.Xaml.dll</HintPath>
+    <Reference Include="Eto.Serialization.Xaml">
+      <HintPath>..\packages\Eto.Serialization.Xaml.2.3.0\lib\portable-win8+net45+wp8+wpa81+monotouch+monoandroid+xamarin.mac\Eto.Serialization.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="Eto">
-      <HintPath>..\..\..\.config\NuGet\packages\Eto.Forms.2.3.0\lib\net45\Eto.dll</HintPath>
+      <HintPath>..\packages\Eto.Forms.2.3.0\lib\portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Eto.dll</HintPath>
     </Reference>
-    <Reference Include="Eto.Serialization.Xaml">
-      <HintPath>..\..\..\.config\NuGet\packages\Eto.Serialization.Xaml.2.3.0\lib\net45\Eto.Serialization.Xaml.dll</HintPath>
+    <Reference Include="Portable.Xaml">
+      <HintPath>..\packages\Portable.Xaml.0.14.0\lib\portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Portable.Xaml.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
