--- a/MarkdownDeep/MarkdownDeep.csproj
+++ b/MarkdownDeep/MarkdownDeep.csproj
@@ -54,7 +54,9 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CustomCommands>
       <CustomCommands>
-        <Command type="AfterBuild" />
+        <Command>
+          <type>AfterBuild</type>
+        </Command>
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
