--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,4 +9,6 @@
   <repository path="../MDGui.WinForms/packages.config" />
   <repository path="../MDGui.Wpf/packages.config" />
   <repository path="../MDGui/packages.config" />
+  <repository path="../MDGuiGtk2/packages.config" />
+  <repository path="../MDGuiGtk3/packages.config" />
 </repositories>
