--- a/MDToTeX/MDToTeX.csproj
+++ b/MDToTeX/MDToTeX.csproj
@@ -33,29 +33,17 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TeX\DD.cs" />
-    <Compile Include="TeX\DT.cs" />
-    <Compile Include="TeX\IMDNode.cs" />
-    <Compile Include="TeX\ListItem.cs" />
-    <Compile Include="TeX\TeXRenderer.cs" />
-    <Compile Include="TeX\MDBlock.cs" />
-    <Compile Include="TeX\MDCodeBlock.cs" />
-    <Compile Include="TeX\MDEmphasis.cs" />
-    <Compile Include="TeX\MDText.cs" />
-    <Compile Include="TeX\OrderedList.cs" />
-    <Compile Include="TeX\Paragraph.cs" />
-    <Compile Include="TeX\Quote.cs" />
-    <Compile Include="TeX\Table.cs" />
-    <Compile Include="TeX\UnorderedList.cs" />
-    <Compile Include="TeX\IMDBlock.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MarkdownDeep\MarkdownDeep.csproj">
       <Project>{1569ED47-C7C9-4261-B6F4-7445BD0F2C95}</Project>
       <Name>MarkdownDeep</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MarkdownRenderers\MarkdownRenderers.csproj">
+      <Project>{B855AE85-C96A-4C28-944F-D1C3F332E0D6}</Project>
+      <Name>MarkdownRenderers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
