--- a/Eto.Markdown/packages.config
+++ b/Eto.Markdown/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Eto.Forms" version="2.3.0" targetFramework="net461" />
+  <package id="NuGet.Build.Packaging" version="0.2.2" targetFramework="net461" developmentDependency="true" />
   <package id="Portable.Xaml" version="0.14.0" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
