--- a/MDGui/MDGui.csproj
+++ b/MDGui/MDGui.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,6 +11,16 @@
     <RootNamespace>MDGui</RootNamespace>
     <AssemblyName>MDGui</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <PackOnBuild>true</PackOnBuild>
+    <PackageId>MDGui</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Paul Schneider &lt;paul@pschneider.fr&gt;</Authors>
+    <NeutralLanguage>fr-FR</NeutralLanguage>
+    <Owners>Paul Schneider</Owners>
+    <PackageReleaseNotes>a very Beta release</PackageReleaseNotes>
+    <PackageTags>Mardown Text Editor</PackageTags>
+    <Title>Mardown Gui</Title>
+    <Description>Markdown text editor (Eto based)</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -105,4 +116,5 @@
     <Folder Include="Services\" />
     <Folder Include="Dialogs\" />
   </ItemGroup>
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.2\build\NuGet.Build.Packaging.targets')" />
 </Project>
