--- a/MDGui/packages.config
+++ b/MDGui/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Eto.Forms" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Serialization.Xaml" version="2.3.0" targetFramework="net461" />
+  <package id="NuGet.Build.Packaging" version="0.2.2" targetFramework="net461" developmentDependency="true" />
   <package id="Portable.Xaml" version="0.14.0" targetFramework="net461" />
 </packages>
