--- a/MDGuiGtk3/packages.config
+++ b/MDGuiGtk3/packages.config
@@ -3,6 +3,7 @@
   <package id="Eto.Forms" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Platform.Gtk3" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Serialization.Xaml" version="2.3.0" targetFramework="net461" />
+  <package id="NuGet.Build.Packaging" version="0.2.2" targetFramework="net461" developmentDependency="true" />
   <package id="Portable.Xaml" version="0.14.0" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
